Fixing overflow bug caused by full-bleed class. #512

--- a/components/base-css/src/_utility-classes.scss
+++ b/components/base-css/src/_utility-classes.scss
@@ -1181,3 +1181,9 @@
 .stack * + * {
   margin-top: 1.5rem;
 }
+
+/* Full bleed */
+.full-bleed {
+  margin-left: calc(50% - 50vw);
+  width: 100vw;
+}
